# cicero

./: LICENSE  README.md  contribute.md
src/: Cargo.dev.toml  Cargo.toml  rustfmt.toml
src/cicero/client/: Cargo.toml  LICENSE  z.txt
src/cicero/client/src/: config.rs  main.rs  test.rs
src/cicero/client/src/cfx/: client.rs  mod.rs
src/cicero/client/src/cli/: cli_test.rs
src/cicero/client/src/echo/: mod.rs  server.rs
src/cicero/client/src/echo/setup/: discover.rs  first_time.rs  mod.rs
src/cicero/lib/: Cargo.toml  process_manager.grok.rs  z.txt
src/cicero/lib/src/: cfx.rs  error.rs  lib.rs  logger.rs  preludes.rs
src/cicero/lib/src/security/: forge.rs  mod.rs  postman.rs  user_key.rs
src/cicero/lib/src/utils/: mod.rs  process_manager.rs  random.rs  sys.rs
src/cicero/server/: Cargo.toml  reset.sh  z.txt
src/cicero/server/src/: main.rs  test.rs
src/cicero/server/src/apollo/: api.rs  auth.rs  config.rs  mod.rs  router.rs  server.rs  vault.rs
src/cicero/server/src/apollo/hq/: hq.rs  mod.rs
src/cicero/server/src/apollo/setup/: first_time.rs  hardware_profile.rs  llm.rs  mod.rs  network_mode.rs  ollama.rs  ssl_cert.rs
src/cicero/server/src/cfx/: authenticator.rs  mod.rs  server.rs  storage.rs
src/cicero/server/src/cli/: mod.rs
src/cicero/server/src/llm/: mod.rs
src/cicero/server/src/llm/chat/: conversation.rs  internal.rs  mod.rs  router.rs  user_reply.rs
src/cicero/server/src/llm/chat/pipelines/: intro_old.rs
src/cicero/server/src/llm/models/: mod.rs  ollama.rs  provider.rs  size.rs
src/cicero/server/src/llm/rag/: embeddings.rs  faiss.rs  mod.rs
src/cicero/server/src/user/: mod.rs  schema.rs  user.rs
src/cicero_old/: Cargo.toml
src/cicero_old/src/: main.rs  test.rs
src/cicero_old/src/api/: cicero.rs  mod.rs  nlp.rs  std.rs
src/cicero_old/src/cli/: cli_test.rs  mod.rs
src/cicero_old/src/cli/llm/: chat.rs  mod.rs
src/cicero_old/src/cli/profile/: create.rs  login.rs  logout.rs  mod.rs
src/cicero_old/src/cli/sys/: mod.rs
src/cicero_old/src/cli/sys/dev/: disable_dev_mode.rs  enable_dev_mode.rs  mod.rs
src/cicero_old/src/cli/sys/devadmin/: mod.rs  render.rs  vocab.rs
src/cicero_old/src/cli/sys/server/: apollo.rs  echo.rs  mod.rs
src/cicero_old/src/client/: config.rs  mod.rs  user.rs
src/cicero_old/src/client/cfx/: authenticator.rs  client.rs  mod.rs
src/cicero_old/src/llm/: faiss.rs  memory.rs  mod.rs  nlp.rs
src/cicero_old/src/llm/api/: api_client.rs  api_selector.rs  claude.rs  generic.rs  mistral.rs  mod.rs  openai.rs  z.txt
src/cicero_old/src/llm/chat/: conversation.rs  internal.rs  mod.rs  router.rs  user_reply.rs
src/cicero_old/src/llm/chat/pipelines/: intro.rs  mod.rs
src/cicero_old/src/llm/models/: library.rs  mod.rs  model.rs  model_new.rs
src/cicero_old/src/llm/text/: distance.rs  mod.rs  preprocess.rs  scoring.rs  tf_idf.rs
src/cicero_old/src/server/: api.rs  config.rs  mod.rs
src/cicero_old/src/server/apollo/: apollo.rs  mod.rs  nlp.rs  structs.rs
src/cicero_old/src/server/apollo/manager/: chat_manager.rs  echo_assistant.rs  hardware.rs  hq.rs  manager.rs  mod.rs  models.rs  ollama.rs  plugin_manager.rs  setup.rs  user_manager.rs  vault.rs
src/cicero_old/src/server/apollo/user/: mod.rs  schema.rs  sqldb.rs  user.rs
src/cicero_old/src/server/cfx/: connection.rs  mod.rs  server.rs  server_claude.rs  storage.rs
src/cicero_old/src/server/echo/: ajax.rs  echo.rs  mod.rs
src/cicero_old/src/server/echo/render/: account_page.rs  assets.rs  mod.rs  nav_menu.rs
src/cicero_old/src/server/echo/render/pages/: chat.rs  index.rs  mod.rs
src/cicero_old/src/server/security/: forge.rs  mod.rs  postman.rs  user_key.rs
src/cicero_old/src/utils/: api_client.rs  mod.rs  process_manager.rs  random.rs  scrape_wikipedia.rs  sys.rs
src/evolve/: Cargo.toml
src/evolve/src/: manifest.rs
src/plugins/core/: Cargo.toml
src/plugins/core/src/: lib.rs
src/plugins/core/src/chat/: intro.rs  mod.rs
src/plugins/nexus/: Cargo.toml
src/quadris/: Cargo.toml  factoid_types.json  notes.txt
src/quadris/src/: category.rs  matrix.rs
src/quadris/src/matrix/: point.rs  quadris.rs
src/quadris/src/matrix/cylinder/: mod.rs
src/sdk/: Cargo.toml
src/sdk/src/: chat_old.rs  chat_old2.rs  lib.rs
src/sdk/src/api/: mod.rs
src/sdk/src/api/nlp/: mod.rs  preprocess_config.rs
src/sdk/src/chat/: mod.rs  node.rs  pipeline.rs  relationships.rs  requested.rs  trigger.rs  user_input.rs
src/sdk/src/chat/intents/: availability.rs  mod.rs
src/sdk/src/rag/: mod.rs
src/sdk/src/task/: iterate.rs  kit.rs  mod.rs  requested.rs
src/sdk/src/task/factory/: iterate.rs  mod.rs
src/sophia/: Cargo.toml  LICENSE  README.md  build.rs
src/sophia/examples/: interpret.rs  tokenize.rs
src/sophia/src/: error.rs  lib.rs  sophia.rs
src/sophia/src/context/: definition.rs  mod.rs
src/sophia/src/context/adjectives/: category.rs
src/sophia/src/context/adverbs/: types.rs
src/sophia/src/context/nouns/: category.rs  definition.rs  industry.rs  mod.rs  state.rs
src/sophia/src/context/verbs/: category.rs
src/sophia/src/interpret/: antecedent_buffer.rs  buffer.rs  coref_categories.rs  interpretation.rs  interpreter.rs  mod.rs  phrase.rs  phrase_buffer.rs
src/sophia/src/interpreter/: antecedent_buffer.rs  buffer.rs  coref_categories.rs  interpretation.rs  interpreter.rs  mod.rs  phrase.rs  phrase_buffer.rs
src/sophia/src/pos_tagger/: context.rs  exact_match.rs  hmm.rs  mod.rs  model.rs  pos_tag.rs  schema.rs  tagger.rs  tagger_new.rs
src/sophia/src/tokenizer/: cleaner.rs  input.rs  mod.rs  token.rs  tokenizer.rs
src/sophia/src/vocab/: cache.rs  category.rs  database.rs  f8.rs  future_verbs.rs  mod.rs  mwe.rs  phrase_intents.rs  pronoun.rs  spell_check.rs  stats.rs
src/verax/: Cargo.toml  verax.conf  z.txt
src/verax/data/release/: libsophia.dylib
src/verax/lib/: Cargo.toml  x509.txt  z.txt
src/verax/lib/src/: error.rs  forge.rs  hq.rs  lib.rs  license.rs  sophia.rs
src/verax/src/: config.rs  hq.rs  main.rs  packager.rs  tools.rs
src/verax/src/cli/: generate.rs  mod.rs  sophia.rs
