
[package]
name = "cicero"
version = "0.1.0"
edition = "2021"

[features]
default = ["apollo", "echo", "helios", "devadmin"]
apollo = ["atlas-web", "cargo_toml", "cicero-core-plugin", "cicero-sdk", "faiss", "libloading", "nix", "omnidata", "parsex", "rayon", "rust-stemmers", "sophia", "sysinfo", "text-splitter", "verax", "which"]
echo = ["tokio", "webbrowser"]
helios = ["atlas-web", "parsex"]
devadmin = []

[dependencies]
base64 = "0.22.0"
hex = "0.4.3"
sha2 = "0.10.8"
urlencoding = "2.1.3"
webbrowser = { version="0.8.15", optional=true }

atlas-web = { path = "../deps/atlas", optional=true }
cargo_toml = { version="0.20.2", optional=true }
cicero-core-plugin = { path = "../plugins/core", optional=true }

libloading = { version="0.8.3", optional=true}

omnidata = { path = "../deps/omnidata", optional=true }
parsex = { path = "../deps/parsex", optional=true }
sophia = { path = "../sophia", optional=true }
quadris = { path = "../quadris", optional=true }
verax = { path = "../verax/lib", optional=true }
rayon = { version="1.8.1", optional=true }
rust-stemmers = { version="1.2.0", optional=true }
text-splitter = { version = "0.9.1", features = ["markdown"], optional=true }
which = { version="6.0.1", optional=true }
diff = "0.1.13"
ollama-rs = { version = "0.2.0", features = ["stream"] }
tokio-stream = "0.1.15"




