[package]
name = "cicero-sophia"
description = "High-performance NLU (natural language understanding) engine built in Rust for speed, accuracy, and privacy. "
version = "0.6.4"
edition = "2024"
authors = ["Aquila Labs"]
homepage = "https://cicero.sh/sophia/"
keywords = ["nlu", "natural-language", "chat", "nlp"]
categories = ["text-processing"]
readme = "README.md"
license="PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/cicero-ai/cicero"

[lib]
name="sophia"

[dependencies]
bincode = "1.3.3"
indexmap = { version = "2.11.0", features = ["serde"] }
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }



