[package]
name = "cicero"
version = "0.1.0"
edition = "2024"
authors = ["Aquila Labs"]
homepage = "https://cicero.sh/"
readme = "README.md"
license="PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/cicero-ai/cicero"


[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
bip39 = "2.1.0"
chrono = { version = "0.4.40", features = ["serde"] }
copy_dir = "0.1.3"
dirs = "6.0.0"
env_logger = "0.11.6"
hkdf = "0.12.4"
local-ip-address = "0.6.3"
log = "0.4.26"
nix = { version = "0.29.0", features = ["process"] }
openssl = { version = "0.10.71", features = ["vendored"] }
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
uuid = { version = "1.15.0", features = ["serde", "v4"] }
winapi = "0.3.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde", "reusable_secrets"] }
