[package]
name = "cicero-server"
version = "0.1.0"
edition = "2024"
authors = ["Aquila Labs"]
homepage = "https://cicero.sh/"
readme = "README.md"
license="PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/cicero-ai/cicero"

[dependencies]
atlas-http = { path = "../../deps/http" }
chrono = { version = "0.4.40", features = ["serde"] }
cicero = { path = "../lib" }
cicero-sdk = { path = "../../sdk" }
faiss = { path = "../../deps/external/faiss-rs", features = ["static", "gpu"] }
falcon-cli = { path = "../../deps/falcon-cli", features = ["log"] }
futures-util = "0.3.31"
indexmap = { version = "2.7.1", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.26"
ndarray = "0.16"
opus = { path = "../../deps/opus" }
ort = { path = "../../deps/external/ort" }
rand = "0.9.0"
regex = "1.11.1"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sysinfo = "0.33.1"
tokenizers = { version = "0.19", default-features = false, features = [ "onig" ] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
url = "2.5.4"
uuid = { version = "1.15.0", features = ["serde"] }
which = "7.0.2"


