[package]
name = "verax"
version = "0.1.0"
edition = "2021"

[lib]
name = "verax"

[features]
default = ["local", "sophia"]
local = []
sophia = []

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
atlas-http = "0.2.3"
bincode = "1.3.3"
sophia-interfaces = { path = "../../../../premium/sophia/interfaces" }
hex = "0.4.3"
hkdf = "0.12.4"
libloading = "0.8.4"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.125"
sha2 = "0.10.8"
tempfile = "3.12.0"


